testsuite/tests/rename/should_fail/rnfail015.stderr
rnfail015.hs:14:9: error: [GHC-29916]
    Multiple declarations of ‘TokLiteral’
    At: rnfail015.hs:14:9-18
        rnfail015.hs:8:9-18

